# icfp2017

./: .gitignore  README.md  install  make_tar.sh
online-runner/: .online-runner.py.swp  login.txt  matchmaking.py  online-runner.py
random_solution/: .ycm_extra_conf.py  CMakeLists.txt  launcher.h  main.cpp  map.cpp  map.h  random_solution.cpp
solutions/: CMakeLists.txt  bridges_burner.cpp  bridges_burner.h  bruteforce.h  draw.cpp  draw.h  dsu.h  flow_st_solution.cpp  futures.cpp  greed.cpp  greed.h  greed_solution.cpp  greed_solution.h  greed_st_maxcut_solution.cpp  greed_st_pidor_endspiel_solution.cpp  greed_st_solution.cpp  launcher.cpp  map.cpp  map.h  maximize_cut_solution.cpp  pidor.cpp  pidor.h  random.h  random_solution.cpp  scored_pidor_endspiel_solution.cpp  scored_st_solution.cpp  surround_pidor_endspiel_solution.cpp  wise.cpp  wise.h  wise_pidor_solution.cpp
src/: CMakeLists.txt  bridges_burner_solution.cpp  bruteforce.h  bruteforce_solution.cpp  draw.cpp  draw.h  futures.cpp  futures.h  greed.cpp  greed_solution.cpp  greed_st_solution.cpp  greed_st_with_futures_solution.cpp  greed_surround_st_solution.cpp  json.hpp  launcher.h  map.cpp  map.h  maximize_cut.cpp  maximize_cut.h  maximize_cut_solution.cpp  pidor.h  pidor_solution.cpp  random_solution.cpp  scored_surround_st_solution.cpp  wise.cpp  wise_st_solution.cpp
