cmake_minimum_required(VERSION 2.8)

file(GLOB HEADERS *.h)
set(CMAKE_EXPORT_COMPILE_COMMANDS 1)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} --std=c++14 -Wall -Werror -Wextra -Wunused-parameter -O2 -g")
add_library(common map.cpp launcher.cpp draw.cpp greed.cpp pidor.cpp bridges_burner.cpp maximize_cut.cpp ${HEADERS})

macro(add_solution name) 
  add_executable(${name}_solution ${name}_solution.cpp ${HEADERS})
  target_link_libraries(${name}_solution common)
endmacro()

add_solution(greed)
add_solution(flow_st)
add_solution(bruteforce)
add_solution(greed_st)
add_solution(maximize_cut)
add_solution(greed_surround_st)
add_solution(pidor)
add_solution(bridges_burner)
add_solution(scored_st)
add_solution(scored_surround_st)
add_solution(greed_st_with_futures)
add_solution(greed_st_maxcut)
